--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,11 @@
     --header_color: #604f3a;
     --light_font_color: #d3b481;
     --dark_font_color: #502d16;
+    --h1_font_size: 42px;
+    --h2_font_size: 24px;
+    --h3_font_size: 18px;
+    --p_font_size: 12;
+    --padding_size: 20px;
 }
 
 * {
@@ -21,27 +26,25 @@ body {
 
 /* Styling for the 'header' class */
 .header {
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: var(--header_color);
     color: var(--light_font_color);
-    text-align: justify;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: var(--padding_size);
 }
 
 .header img{
-    display: inline;
     max-height: 100px;
 }
 /* Styling for H1 headers inside the 'header' class */
 .header h1 {
-    display: inline;
-    font-size: 48px;
+    display: inline-block;
+    font-size: var(--h1_font_size);
+    padding: 20px;
+    text-align: justify;
 }
 
 /* Styling for the menu items on the 'header' class */
 .header nav {
-    padding-top: 15px;
-    margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
@@ -50,6 +53,8 @@ body {
 }
 
 .header nav ul {
+    display: flex;
+    justify-content: space-between;
     list-style-type: none;
 }
 
@@ -70,7 +75,7 @@ body {
 
 /* Styling for the document's text (p - paragraphs) */
 main p {
-    font-size: 16px;
+    font-size: var(--p_font_size);
     color: var(--dark_font_color);
 }
 
@@ -83,15 +88,22 @@ main p {
 }
 .content h2 {
     margin-bottom: 20px;
-    font-size: 36px;
+    font-size: var(--h2_font_size);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: var(--dark_font_color);
 }
-
-/* Styling for the 'projects' sub-classes */
+/* Defining the area the first project will occupy */
+#prework{
+    grid-area: prework;
+}
+/* Defining the 'projects' grid and styling attributes */
 .projects {
-    display: flex;
-    flex-wrap: wrap;  
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-template-areas: 
+        "prework prework"
+        "basic_html advanced_css";  
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: var(--dark_font_color);
 }
@@ -106,17 +118,19 @@ main p {
     border-width: 1px;
   }
   .project {
+    flex: 1,0,0;
     margin: 5px;
     border: solid;
   }
   .project h3 {
+    font-size: var(--h3_font_size);
     padding: 5px;
     text-align: justify;
   }
  
 /* Styling for images inside the 'project' sub-classes */
 .projects img {
-    max-height: 200px;
+    max-width: 100%;
 }
 
 .contact div {
